@@ -89,3 +89,10 @@ v0.6.0
 - Extend stress tests to allow testing safe initialization/deinitialization of objects and proxies
 - Fix gcc warnings
 - Use release v1.8.1 of googletest for tests
+
+vX.Y.Z
+- sdbus-c++ now offers automatic download&build of libsystemd dependency, and making it part of sdbus-c++ library, which might be very helpful in non-systemd environments
+- sdbus-c++ file organization has been adjusted to comply to de-facto OSS project standards
+- Using googletest from master branch instead of v1.8.1 which has THREADS_PTHREAD_ARG issue when cross-compiling
+- Documentation improvements
+- Other minor fixes and improvements
